# sqlite-vec-net

./: .dockerignore  .gitattributes  .gitignore  .gitpod.yml  CMakeLists.txt  Dockerfile  README.md  requirements.txt  vcpkg.json
.github/workflows/: build.yml
assets/: sqlite-vec.runtime.any.runtime.native.nuspec.tpl  sqlite_vec.runtime.any.runtime.native.nuspec.tpl
cmake/: FixCompileFlags.cmake  dotnet.cmake  runtime.native.nuspec.in  write_file.cmake
src/examples/: CMakeLists.txt
src/examples/cli/: CMakeLists.txt  core_init.c
src/examples/demo/: CMakeLists.txt  main.c
src/lib/: CMakeLists.txt  exports.def
src/lib/impl/: core_init.c
src/lib/impl/sqlite-vec/: sqlite-vec.cpp
src/lib/include/public/sqlite-vec/: sqlite-vec.hpp
tests/dotnet-test/: .gitignore  UnitTest1.cs  dotnet-test.csproj
tests/python3-loadable/: conftest.py  run.sh  shadow_tests.py  test_basic_info.py
utilities/: bootstrap.sh  build.sh  install_nodejs.sh  install_runtime_deps.sh  run.sh  vercmp.sh
